--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="https://app.tinyadz.com/scripts/ads.js" site-id="6841c0b5f93cb3a2cae303bf" async=""></script>
     <script async="" src="https://swiperjs.com/scripts/swiper-motion.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title></title>
   </head>
   <body>
     <div id="root"></div>
